# lab3_sem3

./: AlphabetIndex.h  ArrayIterator.h  ArraySequence.h  Book.h  CMakeLists.txt  Dictionary.h  FuncForUI.h  Generator.hpp  HashTable.h  KnapsackProblem.h  MostFrequent.h  Pages.h  RBTree.h  README.md  Rows.h  Sequence.h  input.txt  knapsack-output.txt  main  main.cpp  output.txt  outputSequences.txt  outputbook.txt  tests.h  vector.hpp
iterator/: iterator.hpp
